<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_language"
        android:orderInCategory="1"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <!--android:src="@drawable/ic_baseline_translate_24"-->

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="2"
        android:title="@string/action_profile"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_baseline_person_24"-->

    <item
        android:id="@+id/action_exit"
        android:orderInCategory="3"
        android:title="@string/action_exit"
        app:showAsAction="never" />
    <!--android:icon="@drawable/ic_baseline_exit_to_app_24"-->

</menu>