<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/horizontal_margin_0"
    android:layout_marginTop="@dimen/vertical_margin_0"
    android:layout_marginEnd="@dimen/horizontal_margin_0"
    android:layout_marginBottom="@dimen/vertical_margin_0">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView_Main_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin_16"
        android:layout_marginTop="@dimen/vertical_margin_8"
        android:layout_marginEnd="@dimen/horizontal_margin_16"
        android:layout_marginBottom="@dimen/vertical_margin_8"
        app:cardCornerRadius="15dp"
        app:cardElevation="8dp"
        app:contentPadding="@dimen/horizontal_margin_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LinearLayout_Main_temp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circleImageView_Main_temp_Logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/circleImageView_Main_temp_Logo"
                android:src="@drawable/foto"
                tools:layout_constraintBottom_toBottomOf="parent"
                tools:layout_constraintStart_toStartOf="parent"
                tools:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_Main_Header"
                style="@style/TV_Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_8"
                android:layout_marginEnd="@dimen/horizontal_margin_8"
                android:text="@string/textView_Main_temp_Prov"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/circleImageView_Main_temp_Logo"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_Main_temp_Nama1"
                style="@style/TV_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_8"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:text="@string/textView_Main_temp_Nama"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@id/textView_Main_temp_Nama2"
                app:layout_constraintStart_toEndOf="@id/circleImageView_Main_temp_Logo"
                app:layout_constraintTop_toBottomOf="@id/textView_Main_Header" />

            <TextView
                android:id="@+id/textView_Main_temp_Nama2"
                style="@style/TV_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:layout_marginEnd="@dimen/horizontal_margin_8"
                android:text="@string/textView_Main_temp_Nama"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView_Main_temp_Nama1"
                app:layout_constraintTop_toBottomOf="@id/textView_Main_Header" />

            <TextView
                android:id="@+id/textView_Main_temp_Nama3"
                style="@style/TV_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin_8"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:text="@string/textView_Main_temp_Nama"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toStartOf="@id/textView_Main_temp_Nama2"
                app:layout_constraintStart_toEndOf="@id/circleImageView_Main_temp_Logo"
                app:layout_constraintTop_toBottomOf="@id/textView_Main_temp_Nama1" />

            <TextView
                android:id="@+id/textView_Main_temp_Nama4"
                style="@style/TV_Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_8"
                android:layout_marginEnd="@dimen/horizontal_margin_8"
                android:text="@string/textView_Main_temp_Nama"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/textView_Main_temp_Nama1"
                app:layout_constraintTop_toBottomOf="@id/textView_Main_temp_Nama2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>